@startuml
!define table(x) class x << (T,#ff1177) >>
!define primary_key(x) <u>x</u>

table(member) {
    primary_key(id)
    ---
    first_name
    last_name
    email
    department_id (fk)
}

table(department) {
    primary_key(id)
    ---
    name
}

table(task) {
    primary_key(id)
    ---
    name
    description
    status
}

table(task_member) {
    primary_key(id)
    --
    task_id (fk)
    member_id (fk)
}

enum task_status {
    OPEN
    IN_PROGRESS
    FINISHED
    CANCELED
}

member ||--o{ task_member
task ||--o{ task_member
task_status ||-- task
department |o--o{ member

@enduml